# Dashboard-SIAU

./: ECU_MQTT.cpp  README.md
CarDashboard/: CMakeLists.txt  FuelGauge.qml  PraviSpeed.qml  Rpmometar.qml  Turn.qml  main.cpp  main.qml  qmlclient.cpp  qmlclient.h
SensorDataLog/: CMakeLists.txt  main.cpp  teme.txt  themepublisher.cpp  themepublisher.h
